@@ -19,6 +19,7 @@ package androidx.build
 import androidx.build.logging.TERMINAL_RED
 import androidx.build.logging.TERMINAL_RESET
 import java.io.File
+import java.nio.file.Paths
 import javax.inject.Inject
 import org.gradle.api.DefaultTask
 import org.gradle.api.Project
@@ -26,6 +27,7 @@ import org.gradle.api.artifacts.Configuration
 import org.gradle.api.attributes.Attribute
 import org.gradle.api.file.ConfigurableFileCollection
 import org.gradle.api.file.FileTree
+import org.gradle.api.model.ObjectFactory
 import org.gradle.api.tasks.CacheableTask
 import org.gradle.api.tasks.Classpath
 import org.gradle.api.tasks.Input
@@ -77,8 +79,6 @@ private fun Project.getKtlintConfiguration(): ConfigurableFileCollection {
 }
 
 private val DisabledRules = listOf(
-    // does not match IJ default ordering
-    "import-ordering",
     // not useful for our projects
     "final-newline",
     // TODO: reenable when https://github.com/pinterest/ktlint/issues/1221 is resolved
@@ -88,8 +88,12 @@ private val DisabledRules = listOf(
     "wrapping",
 ).joinToString(",")
 
-private const val ExcludeTestDataFiles = "**/test-data/**/*.kt"
-private const val ExcludeExternalFiles = "**/external/**/*.kt"
+private val ExcludedDirectories = listOf(
+    "test-data",
+    "external",
+)
+
+private val ExcludedDirectoryGlobs = ExcludedDirectories.map { "**/$it/**/*.kt" }
 private const val MainClass = "com.pinterest.ktlint.Main"
 private const val InputDir = "src"
 private const val IncludedFiles = "**/*.kt"
@@ -104,16 +108,18 @@ fun Project.configureKtlint() {
         task.report = File("${outputDir}ktlint-checkstyle-report.xml")
         task.ktlintClasspath.from(getKtlintConfiguration())
     }
-
-    // afterEvaluate because Gradle's default "check" task doesn't exist yet
-    afterEvaluate {
-        addToCheckTask(lintProvider)
-    }
-    addToBuildOnServer(lintProvider)
-
     tasks.register("ktlintFormat", KtlintFormatTask::class.java) { task ->
         task.report = File("${outputDir}ktlint-format-checkstyle-report.xml")
         task.ktlintClasspath.from(getKtlintConfiguration())
+    }
+    // afterEvaluate because Gradle's default "check" task doesn't exist yet
+    afterEvaluate {
+        // multiplatform projects with no enabled platforms do not actually apply the kotlin plugin
+        // and therefore do not have the check task. They are skipped unless a platform is enabled.
+        if (project.tasks.findByName("check") != null) {
+            addToCheckTask(lintProvider)
+            addToBuildOnServer(lintProvider)
+        }
     }
 }
 
@@ -125,22 +131,23 @@ abstract class BaseKtlintTask : DefaultTask() {
     @get:Classpath
     abstract val ktlintClasspath: ConfigurableFileCollection
 
+    @get:Inject
+    abstract val objects: ObjectFactory
+
     @[InputFiles PathSensitive(PathSensitivity.RELATIVE)]
     fun getInputFiles(): FileTree? {
         val projectDirectory = overrideDirectory
         val subdirectories = overrideSubdirectories
-        if (projectDirectory == null || subdirectories == null || subdirectories.isEmpty()) {
+        if (projectDirectory == null || subdirectories.isNullOrEmpty()) {
             // If we have a valid override, use that as the default fileTree
-            return project.fileTree(
-                mutableMapOf(
-                    "dir" to InputDir, "include" to IncludedFiles,
-                    "exclude" to listOf(ExcludeTestDataFiles, ExcludeExternalFiles)
-                )
-            )
+            return objects.fileTree().setDir(InputDir).apply {
+                include(IncludedFiles)
+                exclude(ExcludedDirectoryGlobs)
+            }
         }
-        return project.fileTree(projectDirectory) { tree ->
+        return objects.fileTree().setDir(projectDirectory).apply {
             subdirectories.forEach {
-                tree.include("$it/src/**/*.kt")
+                include("$it/src/**/*.kt")
             }
         }
     }
@@ -171,12 +178,11 @@ abstract class BaseKtlintTask : DefaultTask() {
 
         overrideDirectory?.let {
             val subdirectories = overrideSubdirectories
-            if (subdirectories == null || subdirectories.isEmpty()) return@let
+            if (subdirectories.isNullOrEmpty()) return@let
             subdirectories.map { arguments.add("$it/$InputDir/$IncludedFiles") }
         } ?: arguments.add("$InputDir/$IncludedFiles")
 
-        arguments.add("!$InputDir/$ExcludeTestDataFiles")
-        arguments.add("!$InputDir/$ExcludeExternalFiles")
+        ExcludedDirectoryGlobs.mapTo(arguments) { "!$InputDir/$it" }
         return arguments
     }
 }
@@ -227,6 +233,7 @@ abstract class KtlintFormatTask : BaseKtlintTask() {
             javaExecSpec.mainClass.set(MainClass)
             javaExecSpec.classpath = ktlintClasspath
             javaExecSpec.args = getArgsList(shouldFormat = true)
+            javaExecSpec.jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
             overrideDirectory?.let { javaExecSpec.workingDir = it }
         }
     }
@@ -265,7 +272,13 @@ abstract class KtlintCheckFileTask : DefaultTask() {
     fun runKtlint() {
         if (files.isEmpty()) throw StopExecutionException()
         val kotlinFiles = files.filter { file ->
-            file.endsWith(".kt") || file.endsWith(".ktx")
+            val isKotlinFile = file.endsWith(".kt") || file.endsWith(".ktx")
+            val inExcludedDir =
+                Paths.get(file).any { subPath ->
+                    ExcludedDirectories.contains(subPath.toString())
+                }
+
+            isKotlinFile && !inExcludedDir
         }
         if (kotlinFiles.isEmpty()) throw StopExecutionException()
         val result = execOperations.javaexec { javaExecSpec ->
@@ -278,10 +291,6 @@ abstract class KtlintCheckFileTask : DefaultTask() {
             )
             args.addAll(kotlinFiles)
             if (format) args.add("-F")
-
-            // Note: These exclusions must come after the inputs.
-            args.add("!$ExcludeTestDataFiles")
-            args.add("!$ExcludeExternalFiles")
 
             javaExecSpec.args = args
             javaExecSpec.isIgnoreExitValue = true
